2008-08-15  Behdad Esfahbod  <behdad@gnome.org>

	Bug 547680 – fontconfig monitoring can crash apps

	* gtk/gtksettings.c (settings_update_fontconfig): Clear pango cache
	before recreating fontconfig config.

2008-08-15  Sven Herzberg  <sven@imendio.com>

	Use the g_test_*() API for this test
	reviewed by: Richard Hult

	* gdk/tests/check-gdk-cairo.c: use the g_test_*() API to permit adding
	new tests

2008-08-15  Sven Herzberg  <sven@imendio.com>

	Prepare for using the g_test_*() API
	reviewed by: Richard Hult

	* gdk/tests/check-gdk-cairo.c: use assertions instead of returning an
	error code

2008-08-15  Claudio Saavedra  <csaavedra@igalia.com>

	Bug 547944 – Self-reference in gtk_page_setup_load_file's docs

	* gtk/gtkpagesetup.c: Fix the reference in gtk_page_setup_load_file()
	documentation. Pointed out by Torsten Schoenfeld.

2008-08-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 547655 – gio_can_sniff configure test can fail if not installed
	with prefix {/usr,/usr/local} and XDG_DATA_DIRS env not set

	* README.in: Add a note about shared-mime-info and XDG_DATA_DIRS.

2008-08-15  Christian Dywan  <christian@imendio.com>

	Bug 547846 – gtktestutils functions lack Since: tags

	* gtk/gtktestutils.c: Add missing Since tags

2008-08-15  Christian Dywan  <christian@imendio.com>

        Bug 547775 – Documentation of gtk-button-images is not correct

	* gtk/gtkbutton.c (gtk_button_class_init): Improve documentation
        of "gtk-button-images" setting

2008-08-13  Matthias Clasen  <mclasen@redhat.com>

	Bug 547673 – Accessors for GtkFileSelection.font_entry and
	font_style_entry

	* gtk/gtk.symbols:
	* gtk/gtkfontsel.[hc]: Don't add getters for widgets that are not
	actually part of the font selection dialog in standard builds.
	Pointed out by Torsten Schoenfeld

2008-08-13  Matthias Clasen  <mclasen@redhat.com>

	Bug 547516 – Add comments for translators in gtkprintbackendcups.c

	* modules/printbackends/cups/gtkprintbackendcups.c: Add translator